Migrate closure parameters and rebuild project
Steps taken:
- Rebuild baseLanguage
- Rebuild closure language
- Revert NotNulWhereFilter generation + restart MPS
- Rebuild closures / collection runtimes + collection lang
- Rebuild BL + internal
- Manually remove NotNullWhereFilter type parameters (`new NotNullWhereFilter<[^(]*>\(` replaced by `new NotNullWhereFilter(`)
- Rebuild methodReferences lang
- Migrate closure parameters
- Rebuild all modules
- Open some test projects and migrate/rebuid them